background Fixed (dark Mode)

--- a/controls.css
+++ b/controls.css
@@ -136,7 +136,14 @@ input {
     -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important; 
     -webkit-focus-ring-color: transparent !important; 
     outline: none !important;
-    -webkit-user-modify: read-write-plaintext-only;
+}
+
+.switch {
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0); 
+    -webkit-tap-highlight-color: transparent !important;
+    -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important; 
+    -webkit-focus-ring-color: transparent !important; 
+    outline: none !important;
 }
 
 /***********************************************************************************************************/
